--- a/css/com.css
+++ b/css/com.css
@@ -17,7 +17,7 @@ legend{color:#000;}
 header,section,footer,nav{display: block;}
 /* end */
 
-.wrap{background: url(../images/bg.jpg) no-repeat 50% 0;overflow: hidden;}
+.wrap{background:#e9e9e9 url(../images/bg.jpg) no-repeat 50% 0;overflow: hidden;min-width:1310px;}
 .bold{font-weight: bold;}
 
 .header{background: url(../images/bg_header.png) no-repeat 50% 0;height: 190px;position: relative;z-index: 10;}
@@ -27,4 +27,36 @@ header,section,footer,nav{display: block;}
 .header-date{color: #000;font-size: 14px;text-align: right;margin-top: 40px;}
 .header-btn{color: #00132a;background: #d0dff1;float: right;padding: 8px 16px;border-radius: 5px;margin-top: -30px;text-decoration: none;}
 
-.main{width: 1310px;margin: 0 auto;min-height: 1000px;background: #fff;margin-top: -32px;box-shadow: 1px 1px 30px #aaa}
+.main{width: 1310px;margin: 0 auto;overflow: hidden;background: #fff;margin-top: -32px;box-shadow: 1px 1px 30px #aaa;padding-bottom: 30px;margin-bottom: 50px;}
+
+.nav-box{float: left;margin-left: 20px;width: 220px;margin-top: 40px;}
+.nav-box li{height: 58px;line-height: 58px;text-align: center;color: #4270a7;background: #cedcec;border-bottom: 1px solid #fff;position: relative;}
+.nav-box li:hover,.nav-box .cur{background: #e9eef5;font-weight: bold;color: #4270a7;border-bottom: 1px solid #e9eef5;cursor: default}
+.nav-box .nav-header{background: #4270a7;border-radius: 3px;font-size: 18px;font-weight: bold;color: #fff;border-bottom: none;margin-top: -1px;}
+.nav-box .nav-header-cur{color: #ffa43b;}
+.nav-box .nav-header .nav-header-icon{display: none;}
+.nav-box .nav-header-cur .nav-header-icon{display:block;position: absolute;width: 26px;height: 26px;background:url(../images/spr.png) no-repeat 0 -221px;top: 20px;right: 40px; }
+
+.nav-box .nav-header:hover{border-bottom: 0;background: #4270a7;color:#ffa43b; }
+.nav-icon{position: absolute;width: 26px;height: 26px;background: url(../images/spr.png) no-repeat 0 0;top: 18px;left: 42px;}
+.nav-box .icon-1{background-position:-30px 0; }
+.nav-box .icon-2{background-position:-30px -32px;}
+.nav-box .icon-3{background-position:-30px -65px;}
+.nav-box .icon-4{background-position:-30px -95px;}
+.nav-box .icon-5{background-position:-30px -124px;}
+.nav-box li:hover .icon-1,.nav-box .cur .icon-1{background-position: 0 0;}
+.nav-box li:hover .icon-2,.nav-box .cur .icon-2{background-position: 0 -34px;}
+.nav-box li:hover .icon-3,.nav-box .cur .icon-3{background-position: 0 -66px;}
+.nav-box li:hover .icon-4,.nav-box .cur .icon-4{background-position: 0 -95px;}
+.nav-box li:hover .icon-5,.nav-box .cur .icon-5{background-position: 0 -124px;}
+.content{margin-left: 20px;margin-top: 40px;float: left;border-radius: 5px;background: #eff3f8;width: 1028px;position: relative;}
+
+.content-local{margin-top: -26px;margin-bottom: 6px;font-size: 14px;}
+.red{color: #cb0000;}
+.blue{color: #0069e9;}
+
+table{width: 97%;margin: 0 auto;}
+table a{text-decoration: underline;cursor: pointer;}
+th,td{border: 1px solid #cbcfd3;color: #193e6b;font-size: 14px;padding: 6px 10px;line-height: 1.5}
+th{background: #dce1e7;text-align: center;}
+
