--- a/css/com.css
+++ b/css/com.css
@@ -60,3 +60,42 @@ table a{text-decoration: underline;cursor: pointer;}
 th,td{border: 1px solid #cbcfd3;color: #193e6b;font-size: 14px;padding: 8px 10px;line-height: 1.5}
 th{background: #dce1e7;text-align: center;}
 
+
+
+/*通用类*/
+.ver-box {
+    overflow: hidden;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+.ver-box li {
+    float: left;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    line-height: 26px;
+    font-size: 14px;
+    margin-right: 20px;
+}
+.ver-box li label {
+    float: left;
+    text-align: right;
+    width: 90px;
+    margin-right: 10px;
+}
+.ver-box input {
+    border: none;
+    background: #fff;
+    width: 156px;
+    height: 26px;
+}
+.ver-box select {
+    width: 156px;
+    border: none;
+    height: 26px;
+}
+.ver-box option {
+    text-align: center;
+}
+.ver-box .btn{background: #225ca3;border-radius: 3px;font-size: 14px;float: left;height: 26px;line-height: 26px;width: 60px;text-decoration: none;color: #fff;text-align: center;}
+
